--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'
 
@@ -70,6 +71,7 @@ tasks.register("compileQuerydsl", JavaCompile) {
 
 tasks.withType(JavaCompile).configureEach {
 	options.annotationProcessorPath = configurations.querydsl
+	// options.compilerArgs += "-parameters" 컴파일된 class 파일에 실제 파라미터 이름이 들어가도록 설정 부여
 }
 
 tasks.named('test') {
