--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	// Spring Boot 3.4.5 기준 최신 Hibernate
 	implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
 	implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
