--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,23 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+	imports {
+		// Spring Cloud 2023.0 릴리즈 트레인 (버전은 필요에 따라 맞춰주세요)
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.1"
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	// validation 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// FeignClient 의존성
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
 
 	// Spring Boot 3.4.5 기준 최신 Hibernate
 	implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
