--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
 	// feign client
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.0'
 
