--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+        hbm2ddl:
+          auto: create
         default_batch_fetch_size: 1000
 
   sql:
