--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         format_sql: true
         use_sql_comments: true
         hbm2ddl:
-          auto: create
+          auto: update # DB에 수동으로 넣어야할 데이터가 있기때문에 다시 변경
         default_batch_fetch_size: 1000
 
   sql:
