--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,5 +17,9 @@ spring:
         hbm2ddl:
           auto: update
         default_batch_fetch_size: 1000
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
 
 
