--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,14 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	// Thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+
 	//swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
