--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,4 +22,8 @@ spring:
       pageable:
         one-indexed-parameters: true
 
-
+jwt:
+  token:
+    secretKey: umceightfightingjwttokenauthentication
+    expiration:
+      access: 14400000
