--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
         use_sql_comments: true
         hbm2ddl:
           auto: update
+  kakao:
+    auth:
+      client:
+      redirect: http://localhost:8080/auth/login/kakao
+
 discord:
   webhook:
     url:
